--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,3 +25,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
+      - run: |-
+          curl -X POST --data-urlencode \
+          "payload={\"channel\": \"#雑談カフェ\", \"username\": \"メイドちゃん\", \"text\": \"メイドちゃんのレベルが上がったよ！(^o^)\", \"icon_emoji\": \":maidchan:\"}"\
+          https://hooks.slack.com/services/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
